--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,9 +29,9 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   },
   "prettier/prettier": [
-    "error",
-    {
-      "endOfLine": "auto"
-    }
+    "error"
+    // {
+    //   "endOfLine": "auto"
+    // }
   ]
 }
